[package]
name = "capwriter"
version = "0.4.3"
authors = ["baku4 <bahkhun@gmail.com>"]
description = "Fast saving and loading with annotating cap for vector and slice"
edition = "2024"
readme = "README.md"
license = "MIT"
resolver = "2"

[dependencies]
bytemuck = "1.22"
tokio = { version = "1", default-features = false, features=["io-util"], optional = true }

[dev-dependencies]
rand = "0.9"
criterion = "0.3.5"
serde = "1.0.136"
bincode = { version="2.0", features=["std"] }
tokio = { version = "1", default-features = false, features = ["io-util", "rt", "macros", "rt-multi-thread"] }

[features]
default = []
async-tokio  = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmark"
harness = false
